--- a/app/src/main/res/layout/main_activity_fragment_holder.xml
+++ b/app/src/main/res/layout/main_activity_fragment_holder.xml
@@ -2,7 +2,7 @@
 <FrameLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/activity_memories"
+    android:id="@+id/main_activity_fragment_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
